# llm-apps

./: .gitignore  README.md  home.py  pyproject.toml
notebooks/: langchain_concepts.ipynb  rag_llama2.ipynb
pages/: 💬_Chatbot.py  📖_File Chat.py
